--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 fastapi = "^0.109.0"
 structlog = "^24.1.0"
 uvicorn = "^0.27.0.post1"
+jinja2 = "^3.1.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
